src/cli/snapshots/mise__cli__set__tests__env_vars-3.snap
---
source: src/cli/set.rs
expression: "file::read_to_string(cf_path).unwrap()"
---
[env]
FOO = "bar"

