src/cli/snapshots/mise__cli__set__tests__env_vars-5.snap
---
source: src/cli/set.rs
expression: "file::read_to_string(cf_path).unwrap()"
snapshot_kind: text
---
[env]
FOO = "bar"
