src/cli/snapshots/mise__cli__set__tests__show_env_vars.snap
---
source: src/cli/set.rs
expression: output
snapshot_kind: text
---
TEST_ENV_VAR  test-123 ~/config/config.toml
